[gd_scene load_steps=12 format=4 uid="uid://casoiwuxu341i"]

[ext_resource type="Script" path="res://camera/camera_2d.gd" id="1_uchmn"]
[ext_resource type="Script" path="res://SDTimer/player.gd" id="2_507lp"]
[ext_resource type="Texture2D" uid="uid://caqaephv4uvqk" path="res://SDTimer/player.png" id="3_jc7vs"]
[ext_resource type="Texture2D" uid="uid://dgs4p3y1gtp7d" path="res://camera/BG1.png" id="4_cirik"]
[ext_resource type="Texture2D" uid="uid://xapq6e6d6egy" path="res://camera/BG2.png" id="5_d7r6s"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8b3m0"]
texture = ExtResource("4_cirik")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_y0n1l"]
texture = ExtResource("5_d7r6s")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_c4bdw"]
tile_size = Vector2i(128, 128)
sources/2 = SubResource("TileSetAtlasSource_8b3m0")
sources/3 = SubResource("TileSetAtlasSource_y0n1l")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_80dby"]
size = Vector2(20.0418, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5cmku"]
size = Vector2(19.977, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ew1f2"]
size = Vector2(60, 63)

[node name="Node2D" type="Node2D"]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD6//z/AgAAAAAAAAD7//3/AgAAAAAAAAD8//z/AgAAAAAAAAD6//7/AgAAAAAAAAD7////AgAAAAAAAAD8/wAAAgAAAAAAAAD9/wEAAgAAAAAAAAD+/wIAAgAAAAAAAAD//wMAAgAAAAAAAAD6/wAAAgAAAAAAAAD7/wEAAgAAAAAAAAD8/wIAAgAAAAAAAAD9/wMAAgAAAAAAAAD6/wIAAgAAAAAAAAD7/wMAAgAAAAAAAAD8//7/AgAAAAAAAAD9////AgAAAAAAAAD+/wAAAgAAAAAAAAD//wEAAgAAAAAAAAAAAAIAAgAAAAAAAAABAAMAAgAAAAAAAAADAAMAAgAAAAAAAAACAAIAAgAAAAAAAAABAAEAAgAAAAAAAAAAAAAAAgAAAAAAAAD/////AgAAAAAAAAD+//7/AgAAAAAAAAD9//3/AgAAAAAAAAD+//z/AgAAAAAAAAD///3/AgAAAAAAAAAAAP7/AgAAAAAAAAABAP//AgAAAAAAAAACAAAAAgAAAAAAAAADAAEAAgAAAAAAAAAEAAIAAgAAAAAAAAAFAAMAAgAAAAAAAAAAAPz/AgAAAAAAAAABAP3/AgAAAAAAAAACAP7/AgAAAAAAAAADAP//AgAAAAAAAAAEAAAAAgAAAAAAAAAFAAEAAgAAAAAAAAAFAP//AgAAAAAAAAAEAP7/AgAAAAAAAAADAP3/AgAAAAAAAAACAPz/AgAAAAAAAAAEAPz/AgAAAAAAAAAFAP3/AgAAAAAAAAD7//z/AwAAAAAAAAD6//3/AwAAAAAAAAD9//z/AwAAAAAAAAD8//3/AwAAAAAAAAD7//7/AwAAAAAAAAD6////AwAAAAAAAAD///z/AwAAAAAAAAD+//3/AwAAAAAAAAD9//7/AwAAAAAAAAD8////AwAAAAAAAAD7/wAAAwAAAAAAAAD6/wEAAwAAAAAAAAABAPz/AwAAAAAAAAAAAP3/AwAAAAAAAAD///7/AwAAAAAAAAD+////AwAAAAAAAAD9/wAAAwAAAAAAAAD8/wEAAwAAAAAAAAD7/wIAAwAAAAAAAAD6/wMAAwAAAAAAAAADAPz/AwAAAAAAAAACAP3/AwAAAAAAAAABAP7/AwAAAAAAAAAAAP//AwAAAAAAAAD//wAAAwAAAAAAAAD+/wEAAwAAAAAAAAD9/wIAAwAAAAAAAAD8/wMAAwAAAAAAAAAFAPz/AwAAAAAAAAAEAP3/AwAAAAAAAAADAP7/AwAAAAAAAAACAP//AwAAAAAAAAABAAAAAwAAAAAAAAAAAAEAAwAAAAAAAAD//wIAAwAAAAAAAAD+/wMAAwAAAAAAAAAAAAMAAwAAAAAAAAABAAIAAwAAAAAAAAACAAEAAwAAAAAAAAADAAAAAwAAAAAAAAAEAP//AwAAAAAAAAAFAP7/AwAAAAAAAAAFAAAAAwAAAAAAAAAEAAEAAwAAAAAAAAADAAIAAwAAAAAAAAACAAMAAwAAAAAAAAAFAAIAAwAAAAAAAAAEAAMAAwAAAAAAAAD5//z/AwAAAAAAAAD4//v/AwAAAAAAAAD3//r/AwAAAAAAAAD2//n/AwAAAAAAAAD1//j/AwAAAAAAAAD0//n/AwAAAAAAAAD1//r/AwAAAAAAAAD2//v/AwAAAAAAAAD3//z/AwAAAAAAAAD4//3/AwAAAAAAAAD5//7/AwAAAAAAAAD5/wAAAwAAAAAAAAD4////AwAAAAAAAAD3//7/AwAAAAAAAAD2//3/AwAAAAAAAAD1//z/AwAAAAAAAAD0//v/AwAAAAAAAAD5/wIAAwAAAAAAAAD4/wEAAwAAAAAAAAD3/wAAAwAAAAAAAAD2////AwAAAAAAAAD1//7/AwAAAAAAAAD0//3/AwAAAAAAAAD5/wQAAwAAAAAAAAD4/wMAAwAAAAAAAAD3/wIAAwAAAAAAAAD2/wEAAwAAAAAAAAD1/wAAAwAAAAAAAAD0////AwAAAAAAAAD6/wUAAwAAAAAAAAD7/wYAAwAAAAAAAAD8/wcAAwAAAAAAAAD6/wcAAwAAAAAAAAD5/wYAAwAAAAAAAAD4/wUAAwAAAAAAAAD3/wQAAwAAAAAAAAD2/wMAAwAAAAAAAAD1/wIAAwAAAAAAAAD0/wEAAwAAAAAAAAD0/wMAAwAAAAAAAAD1/wQAAwAAAAAAAAD2/wUAAwAAAAAAAAD3/wYAAwAAAAAAAAD4/wcAAwAAAAAAAAD2/wcAAwAAAAAAAAD1/wYAAwAAAAAAAAD0/wUAAwAAAAAAAAD0/wcAAwAAAAAAAAD7/wQAAwAAAAAAAAD8/wUAAwAAAAAAAAD9/wYAAwAAAAAAAAD+/wcAAwAAAAAAAAD9/wQAAwAAAAAAAAD+/wUAAwAAAAAAAAD//wYAAwAAAAAAAAAAAAcAAwAAAAAAAAD//wQAAwAAAAAAAAAAAAUAAwAAAAAAAAABAAYAAwAAAAAAAAACAAcAAwAAAAAAAAABAAQAAwAAAAAAAAACAAUAAwAAAAAAAAADAAYAAwAAAAAAAAAEAAcAAwAAAAAAAAADAAQAAwAAAAAAAAAEAAUAAwAAAAAAAAAFAAYAAwAAAAAAAAAGAAcAAwAAAAAAAAAHAAYAAwAAAAAAAAAIAAUAAwAAAAAAAAAJAAQAAwAAAAAAAAAKAAMAAwAAAAAAAAALAAIAAwAAAAAAAAAIAAcAAwAAAAAAAAAJAAYAAwAAAAAAAAAKAAUAAwAAAAAAAAALAAQAAwAAAAAAAAAKAAcAAwAAAAAAAAALAAYAAwAAAAAAAAAGAAUAAwAAAAAAAAAHAAQAAwAAAAAAAAAIAAMAAwAAAAAAAAAJAAIAAwAAAAAAAAAKAAEAAwAAAAAAAAALAAAAAwAAAAAAAAAFAAQAAwAAAAAAAAAGAAMAAwAAAAAAAAAHAAIAAwAAAAAAAAAIAAEAAwAAAAAAAAAJAAAAAwAAAAAAAAAKAP//AwAAAAAAAAALAP7/AwAAAAAAAAAGAAEAAwAAAAAAAAAHAAAAAwAAAAAAAAAIAP//AwAAAAAAAAAJAP7/AwAAAAAAAAAKAP3/AwAAAAAAAAALAPz/AwAAAAAAAAAGAP//AwAAAAAAAAAHAP7/AwAAAAAAAAAIAP3/AwAAAAAAAAAJAPz/AwAAAAAAAAAKAPv/AwAAAAAAAAALAPr/AwAAAAAAAAAGAP3/AwAAAAAAAAAHAPz/AwAAAAAAAAAIAPv/AwAAAAAAAAAJAPr/AwAAAAAAAAAKAPn/AwAAAAAAAAALAPj/AwAAAAAAAAAGAPv/AwAAAAAAAAAHAPr/AwAAAAAAAAAIAPn/AwAAAAAAAAAJAPj/AwAAAAAAAAAHAPj/AwAAAAAAAAAGAPn/AwAAAAAAAAAFAPr/AwAAAAAAAAAEAPv/AwAAAAAAAAAFAPj/AwAAAAAAAAAEAPn/AwAAAAAAAAADAPr/AwAAAAAAAAACAPv/AwAAAAAAAAAAAPv/AwAAAAAAAAD///r/AwAAAAAAAAD+//n/AwAAAAAAAAD9//j/AwAAAAAAAAABAPr/AwAAAAAAAAAAAPn/AwAAAAAAAAD///j/AwAAAAAAAAACAPn/AwAAAAAAAAADAPj/AwAAAAAAAAABAPj/AwAAAAAAAAD7//j/AwAAAAAAAAD8//n/AwAAAAAAAAD9//r/AwAAAAAAAAD+//v/AwAAAAAAAAD5//j/AwAAAAAAAAD6//n/AwAAAAAAAAD7//r/AwAAAAAAAAD8//v/AwAAAAAAAAD3//j/AwAAAAAAAAD4//n/AwAAAAAAAAD5//r/AwAAAAAAAAD6//v/AwAAAAAAAAD1/wcAAgAAAAAAAAD0/wYAAgAAAAAAAAD0//j/AgAAAAAAAAD1//n/AgAAAAAAAAD2//r/AgAAAAAAAAD3//v/AgAAAAAAAAD4//z/AgAAAAAAAAD5//3/AgAAAAAAAAAAAAQAAgAAAAAAAAABAAUAAgAAAAAAAAACAAYAAgAAAAAAAAADAAcAAgAAAAAAAAABAAcAAgAAAAAAAAAAAAYAAgAAAAAAAAD//wUAAgAAAAAAAAD+/wQAAgAAAAAAAAD5////AgAAAAAAAAD4//7/AgAAAAAAAAD3//3/AgAAAAAAAAD2//z/AgAAAAAAAAD1//v/AgAAAAAAAAD0//r/AgAAAAAAAAD0//z/AgAAAAAAAAD1//3/AgAAAAAAAAD2//7/AgAAAAAAAAD3////AgAAAAAAAAD4/wAAAgAAAAAAAAD5/wEAAgAAAAAAAAD8/wQAAgAAAAAAAAD9/wUAAgAAAAAAAAD+/wYAAgAAAAAAAAD//wcAAgAAAAAAAAD9/wcAAgAAAAAAAAD8/wYAAgAAAAAAAAD7/wUAAgAAAAAAAAD6/wQAAgAAAAAAAAD5/wMAAgAAAAAAAAD4/wIAAgAAAAAAAAD3/wEAAgAAAAAAAAD2/wAAAgAAAAAAAAD1////AgAAAAAAAAD0//7/AgAAAAAAAAD0/wAAAgAAAAAAAAD1/wEAAgAAAAAAAAD2/wIAAgAAAAAAAAD3/wMAAgAAAAAAAAD4/wQAAgAAAAAAAAD5/wUAAgAAAAAAAAD6/wYAAgAAAAAAAAD7/wcAAgAAAAAAAAD5/wcAAgAAAAAAAAD4/wYAAgAAAAAAAAD3/wUAAgAAAAAAAAD2/wQAAgAAAAAAAAD1/wMAAgAAAAAAAAD0/wIAAgAAAAAAAAD0/wQAAgAAAAAAAAD1/wUAAgAAAAAAAAD2/wYAAgAAAAAAAAD3/wcAAgAAAAAAAAAFAAcAAgAAAAAAAAAEAAYAAgAAAAAAAAADAAUAAgAAAAAAAAACAAQAAgAAAAAAAAD5//v/AgAAAAAAAAD4//r/AgAAAAAAAAD3//n/AgAAAAAAAAD2//j/AgAAAAAAAAD4//j/AgAAAAAAAAD5//n/AgAAAAAAAAD6//r/AgAAAAAAAAD7//v/AgAAAAAAAAAEAAQAAgAAAAAAAAAFAAUAAgAAAAAAAAAGAAYAAgAAAAAAAAAHAAcAAgAAAAAAAAAJAAcAAgAAAAAAAAAIAAYAAgAAAAAAAAAHAAUAAgAAAAAAAAAGAAQAAgAAAAAAAAD9//v/AgAAAAAAAAD8//r/AgAAAAAAAAD7//n/AgAAAAAAAAD6//j/AgAAAAAAAAD8//j/AgAAAAAAAAD9//n/AgAAAAAAAAD+//r/AgAAAAAAAAD///v/AgAAAAAAAAAGAAIAAgAAAAAAAAAHAAMAAgAAAAAAAAAIAAQAAgAAAAAAAAAJAAUAAgAAAAAAAAAKAAYAAgAAAAAAAAALAAcAAgAAAAAAAAALAAUAAgAAAAAAAAAKAAQAAgAAAAAAAAAJAAMAAgAAAAAAAAAIAAIAAgAAAAAAAAAHAAEAAgAAAAAAAAAGAAAAAgAAAAAAAAABAPv/AgAAAAAAAAAAAPr/AgAAAAAAAAD///n/AgAAAAAAAAD+//j/AgAAAAAAAAAAAPj/AgAAAAAAAAABAPn/AgAAAAAAAAACAPr/AgAAAAAAAAADAPv/AgAAAAAAAAAGAP7/AgAAAAAAAAAHAP//AgAAAAAAAAAIAAAAAgAAAAAAAAAJAAEAAgAAAAAAAAAKAAIAAgAAAAAAAAALAAMAAgAAAAAAAAALAAEAAgAAAAAAAAAKAAAAAgAAAAAAAAAJAP//AgAAAAAAAAAIAP7/AgAAAAAAAAAHAP3/AgAAAAAAAAAGAPz/AgAAAAAAAAAFAPv/AgAAAAAAAAAEAPr/AgAAAAAAAAADAPn/AgAAAAAAAAACAPj/AgAAAAAAAAAEAPj/AgAAAAAAAAAFAPn/AgAAAAAAAAAGAPr/AgAAAAAAAAAHAPv/AgAAAAAAAAAIAPz/AgAAAAAAAAAJAP3/AgAAAAAAAAAKAP7/AgAAAAAAAAALAP//AgAAAAAAAAALAP3/AgAAAAAAAAAKAPz/AgAAAAAAAAAJAPv/AgAAAAAAAAAIAPr/AgAAAAAAAAAHAPn/AgAAAAAAAAAGAPj/AgAAAAAAAAAIAPj/AgAAAAAAAAAJAPn/AgAAAAAAAAAKAPr/AgAAAAAAAAALAPv/AgAAAAAAAAAKAPj/AgAAAAAAAAALAPn/AgAAAAAAAAA=")
tile_set = SubResource("TileSet_c4bdw")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Top_Wall" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -1024)
scale = Vector2(153.28, 1)
shape = SubResource("RectangleShape2D_80dby")

[node name="Bottom_Wall" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 1024)
scale = Vector2(153.28, 1)
shape = SubResource("RectangleShape2D_80dby")

[node name="Left_Wall" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-1552, 0)
rotation = 1.5708
scale = Vector2(104.24, 1)
shape = SubResource("RectangleShape2D_5cmku")

[node name="Right_Wall" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1552, 0)
rotation = 1.5708
scale = Vector2(104.24, 1)
shape = SubResource("RectangleShape2D_5cmku")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.03
drag_top_margin = 0.03
drag_right_margin = 0.03
drag_bottom_margin = 0.03
script = ExtResource("1_uchmn")

[node name="Player" type="CharacterBody2D" parent="."]
script = ExtResource("2_507lp")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
position = Vector2(-9.53674e-07, 9.53674e-07)
texture = ExtResource("3_jc7vs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_ew1f2")
